--- a/AbacusApp/templates/signup.html
+++ b/AbacusApp/templates/signup.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="signup.css" />
+    <title>Abacus</title>
+
 </head>
 <body>
-    sign up
+
+<body>
+    <div class="container">
+        <div class="content">
+                <div class="heading-section">
+                    <p>Create an account</p>
+                </div>
+                <div class="form-section">
+                    <div class="input-field">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" />
+                    </div>
+                    <div class="input-field">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" />
+                    </div>
+                    <div class="input-field">
+                        <label for="mobile">Mobile Number</label>
+                        <input type="text" name="mobile" />
+                    </div>
+                    <div class="input-field">
+                        <label for="dob">Date Of Birth</label>
+                        <input type="date" name="dob" />
+                    </div>
+                    
+                    <div class="input-field">
+                        <label for="password">Password</label>
+                        <input type="password" name="password"/>
+                    </div>
+                    <div class="input-field">
+                        <label for="c_password">Confirm Password</label>
+                        <input type="password" name="cpassword"/>
+                    </div>
+                    <div>
+                        <span>Already have an account ? <a href="#">Click here</a></span>
+                    </div>
+                    <div class="button-container">
+                        <button type="submit">Submit</button>
+                    </div>
+                </div>
+            </div>
+    </div>
 </body>
+
 </html>
